--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
 .section__container {
     max-width: var(--max-width);
     margin: auto;
-    padding: 5rem 1rem;
+    padding: 5rem 1rem 3rem;
 }
 
 .section__header {
