--- a/src/index.css
+++ b/src/index.css
@@ -317,8 +317,6 @@ header {
 
 .why__grid {
     margin-top: 4rem;
-    display: grid;
-    grid-template-columns: 80px auto;
     gap: 2rem;
 }
 
@@ -327,7 +325,7 @@ header {
     align-items: center;
     justify-content: center;
     font-size: 2.5rem;
-    color: var(--primary-color);
+    color: white;
     border-radius: 10px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
 }
@@ -554,6 +552,7 @@ header {
 }
 
 @media (width < 600px) {
+
     .service__header {
         flex-direction: column;
         text-align: center;
